# lv_port_pc_vscode

./: CMakeLists.txt  lv_conf.h
src/: main.c
src/fonts/: ui_font_mdi100.c  ui_font_mdi130.c  ui_font_mdi18.c  ui_font_mdi30.c  ui_font_mdi34.c  ui_font_mdi80.c  ui_font_star.c  ui_font_star100.c  ui_font_star160.c  ui_font_ver14.c  ui_font_ver16.c  ui_font_ver18.c  ui_font_ver18b.c  ui_font_ver24.c  ui_font_ver26.c  ui_font_ver30.c  ui_font_ver60.c  ui_font_ver70.c
src/glyphs/: actions.c  cam.c  info.c  navi.c
src/glyphs/horus_icons/: alone.c  away.c  custom.c  home_a.c  home_b.c  horus_icons.h  off.c  pair.c  vacation.c
src/glyphs/hud_icons/: coolant_temperature.c  engine.c  gas_station.c  home_export_outline.c  hud_icons.h  satellite_variant.c  thermometer.c  transmission_tower.c  transmission_tower_off.c
src/glyphs/navi_maneuver/: arrow_left_bold.c  arrow_left_top_bold.c  arrow_right_bold.c  arrow_right_top_bold.c  arrow_top_left_thick.c  arrow_top_right_thick.c  arrow_u_down_left.c  arrow_u_down_right.c  arrow_up_bold.c  map_marker_check.c  map_marker_left.c  map_marker_right.c  navi_maneuver_glyphs.h
src/glyphs/osiris_icons/: battery.c  categories.c  clock_icon.c  energy.c  osiris_icons.h  rooms.c  settings.c  steering.c  temperature.c
src/glyphs/speedlimit_icons/: sl005.c  sl010.c  sl020.c  sl030.c  sl040.c  sl050.c  sl060.c  sl070.c  sl080.c  sl090.c  sl100.c  sl110.c  sl120.c  sl130.c  speedlimit_glyphs.h
src/simulations/: sim.h
src/simulations/horus/: horus.c  horus.h
src/simulations/hud/: hud.c  hud.h
src/simulations/osiris_bottom/: osiris_bottom.cpp  osiris_bottom.h
src/simulations/osiris_top/: osiris_top.cpp  osiris_top.h
